--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
             internationally renowned, thought-provoking speakers who inform, educate,
             and entertain our audience! As one or our members told us:</p>
         <blockquote> <i>&ldquo;Each year I give a ticket package to each of our family members.
-            I think of it as the gift of knowledge...and that is priceless.&rdquo;</i></blockquote><br>
+            I think of it as the gift of knowledge...and that is priceless.&rdquo;</i></blockquote>
         <h1> Speaker of the Month</h1>
         <article>
             <h2>Fossil Threads in the Web of Life</h2>
             <img src = "images/sampson_dinosaur.jpg">
-            <h3>February <br> Scott Sampson</h3>
-            <p>What's 75 million years old and brand spanking new? A teenage Utahceratops! Come to the Saroyan, armed with your best dinosaur roar, when Scott Sampson, Research Curator at the Utah Museum of Natural History, steps to the podium. Sampson's research has focused on the ecology and evolution of late Cretaceous dinosaurs and he has conducted fieldwork in a number of countries in Africa</p>
+           <b> <h3>February <br> Scott Sampson</h3></b>
+            <p>What's 75 million years old and brand spanking new? A teenage Utahceratops! Come to the Saroyan, armed with your best dinosaur roar, when Scott Sampson, Research Curator at the Utah Museum of Natural History, steps to the podium. Sampson's research has focused on the ecology and evolution of late Cretaceous dinosaurs and he has conducted fieldwork in a number of <br> countries in Africa.</p>
             <a href="speakers/sampson.html">Read more.</a> <b>Or meet us there!</b>
         </article>
 
@@ -41,9 +41,9 @@
         </ul>
     </section>
     <aside>
-        <h2>Guest speakers</h2> <br>
-        <h3>October<br><a href="speakers/brancaccio.html">David Brancaccio</a></h3>
-        <img src="images/brancaccio75.jpg" alt="David Brancaccio photo">
+        <h2>Guest speakers</h2>
+        <h3>October<br><a href="speakers/toobin.html">Jeffrey Toobin</a></h3>
+        <img src="images/toobin75.jpg" alt="David Brancaccio photo">
         <h3>November<br><a href="speakers/sorkin.html">Andrew Ross Sorkin</a></h3>
         <img src="images/sorkin75.jpg" alt="Andrew Ross Sorkin photo">
         <h3>January<br><a href="speakers/chua.html">Amy Chua</a></h3>
