--- a/speakers/sampson.html
+++ b/speakers/sampson.html
@@ -17,39 +17,35 @@
 </header>
 <main>
 	<section>
-		<h2>Our Mission</h2>
-		<p>San Joaquin Valley Town Hall is a non-profit organization that is run by an
-			all-volunteer board of directors. Our mission is to bring nationally and
-			internationally renowned, thought-provoking speakers who inform, educate,
-			and entertain our audience! As one or our members told us:</p>
-		<blockquote> <i>&ldquo;Each year I give a ticket package to each of our family members.
-			I think of it as the gift of knowledge...and that is priceless.&rdquo;</i></blockquote>
-		<h1> Speaker of the Month</h1>
+		<h1> Fossil Threads in the Web of Life </h1>
 		<article>
-			<h2>Fossil Threads in the Web of Life</h2>
-			<h3>February <br> Scott Sampson</h3>
-			<p>What's 75 million years old and brand spanking new? A teenage Utahceratops! Come to the Saroyan, armed with your best dinosaur roar, when Scott Sampson, Research Curator at the Utah Museum of Natural History, steps to the podium. Sampson's research has focused on the ecology and evolution of late Cretaceous dinosaurs and he has conducted fieldwork in a number of countries in Africa</p>
-			<a href="../speakers/sampson.html">Read more.</a> <b>Or meet us there!</b>
-		</article>
+			<h2> February <br> Scott Sampson</h2>
+		<img src = "../images/sampson_dinosaur.jpg">
+			<p>What's 75 million years old and brand spanking new? A teenage Utahceratops! Come to the Saroyan, armed with your
+				best dinosaur roar, when Scott Sampson, Research Curator at the Utah Museum of Natural History, steps to the podium.
+				Sampson's research has focused on the ecology and evolution of late Cretaceous dinosaurs and he has conducted fieldwork
+				in a number of countries in Africa.</p>
+				<p>Scott Sampson is a Canadian-born paleontologist who received his Ph.D. in zoology from the University of Toronto.
+				His doctoral work focused on two new species of ceratopsids (horned dinosaurs) from the Late Cretaceous of Montana, as well as the growth and function of certopsid horns and frills.</p>
 
-		<h2>Our Ticket Packages</h2>
-		<ul>
-			<li>Season Package: $95</li>
-			<li>Patron Package: $200</li>
-			<li>Single Speaker: $25</li>
-		</ul>
+				<p>Following graduation in 1993, Sampson spent a year working at the American Museum of Natural History in New York City, followed by five years as assistant professor of anatomy at
+				the New York College of Osteopathic Medicine on Long Island. He arrived at the University of Utah accepting a dual position as assistant professor in the Department of Geology and Geophysics
+				and curator of vertebrate paleontology at the Utah Museum of Natural History. His research interests largely revolve around the phylogenetics, functional morphology, and evolution of Late Cretaceous dinosaurs.</p>
+				<p>In addition to his museum and laboratory-based studies, Sampson has conducted paleontological work in Zimbabwe, South Africa, and Madagascar, as well as the United States and Canada. He was also the on-air host
+				for the Discovery Channel's Dinosaur Planet and recently completed a book, Dinosaur Odyssey: Fossil Threads in the Web of Life, which is one of the most comprehensive surveys of dinosaurs and their worlds to date.</p>
+		</article>
 	</section>
 	<aside>
-		<h2>Guest speakers</h2> <br>
-		<h3>October<br><a href="../speakers/brancaccio.html">David Brancaccio</a></h3>
-		<img src="../images/brancaccio75.jpg" alt="David Brancaccio photo">
+		<h2>Guest speakers</h2>
+		<h3>October<br><a href="../speakers/toobin.html">Jeffrey Toobin</a></h3>
+		<img src="../images/toobin75.jpg" alt="Jeffrey Toobin photo">
 		<h3>November<br><a href="../speakers/sorkin.html">Andrew Ross Sorkin</a></h3>
 		<img src="../images/sorkin75.jpg" alt="Andrew Ross Sorkin photo">
 		<h3>January<br><a href="../speakers/chua.html">Amy Chua</a></h3>
 		<img src="../images/chua75.jpg" alt="Amy Chua photo">
 		<h3>February<br><a href="../speakers/sampson.html">Scott Sampson</a></h3>
-		<img src="../images/sampson75.jpg" alt="Scott Sampson photo">
-		<h3><a href = "../index.html">Return to Home page</a></h3>
+		<img src="../images/sampson75.jpg" alt="Scott Sampson photo"> <br>
+		<a href = "../index.html">Return to Home Page</a>
 	</aside>
 </main>
 <footer>
