Updated and fixed sampson page and index

--- a/speakers/brancaccio.html
+++ b/speakers/brancaccio.html
@@ -10,8 +10,10 @@
 <body>
     <main>
 	    <h1>David branaccio</h1>
-	    <h2>This page is under construction.</h2>	        
-    </main>
+	    <h2>This page is under construction.</h2>
+		<a href = "../index.html">Return to Home Page</a>
+
+	</main>
 </body>
 
 </html>
